# lerobot_policy_smolvla_drift

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lerobot_policy_smolvla_drift/: __init__.py  configuration_smolvla_drift.py  drifting_util.py  keystone_util.py  modeling_smolvla_drift.py  processor_smolvla_drift.py  smolvlm_with_expert.py
